crates/oxc_css_parser/tests/recoverable/scss/at-rule/return.scss.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: `@return` is disallowed outside function
  ┌─ return.scss:2:3
  │
2 │   @return 42;
  │   ^^^^^^^^^^

error: `@return` is disallowed outside function
  ┌─ return.scss:5:1
  │
5 │ @return 42;
  │ ^^^^^^^^^^

error: `@return` is disallowed outside function
  ┌─ return.scss:8:3
  │
8 │   @return 42;
  │   ^^^^^^^^^^


